app/styles/_bootstrap-overrides.scss
$focus-transition-duration: 0.2s;

// Not everything can be controlled through variables, so we have to directly override
// some styles

label {
  font-weight: 200;
}

.form-control {
  font-weight: 200;
  box-shadow: none;
  transition-duration: $focus-transition-duration;

  &:focus {
    box-shadow: none;
  }
}

.btn-default {
  &:focus {
    border-color: $input-border-focus;
    background-color: white;

    &.active {
      background-color: #ebebeb;
    }
  }
}

.btn-group  {
  > .btn {
    transition: border-color ease-in-out $focus-transition-duration;
  }

  > .btn:focus + .btn {
    border-left: 1px solid $input-border-focus;
  }
}

.input-group {
  > .input-group-btn > button {
    &:focus {
      border-color: $input-border-focus;
    }
    border-right-width: 1px;
  }
}


.navbar-default .navbar-nav > .active {
  > a, > a:hover, > a:focus {
    box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
  }
}

